--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,14 +11,20 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" href="css/bootstrap-theme.css">
         <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
-        <link type="text/css" rel="stylesheet" href="css/customstyle.css">
+        <link type="text/css" rel="stylesheet" href="css/custom-style.css">
     </head>
     <body>
         <div class="container">
             <p>container</p>
-            <div class="row">
+        <div class="row">
                 <p>row</p>
-            </div>
+        <div class="col-xs-10">
+                    <p>col-xs-10</p>
+        </div>
+        <div class="col-xs-2">
+                    <p>col-xs-10</p>
+        </div>
+        </div>
         </div>
     </body>
 </html>
