--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>About Me</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" href="css/bootstrap-theme.css">
@@ -15,34 +15,25 @@ and open the template in the editor.
     </head>
     <body>
         <div class="container">
-            <p>container</p>
-          <div class="row">
-            <p>row</p>
-            <div class="col-xs-10">
-            <p>col-xs-10</p>    
+            <div class="row">
+                <div class="col-xs-10">
+                    <div class="row">
+                        <div class="col-xs-3"></div>
+                        <div class="col-xs-9"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-3"></div>
+                        <div class="col-xs-9"></div>
+                    </div>
+                </div>
+                <div class="col-xs-2">
+                    <nav class="list-group">
+                        <a class="list-group-item" href="index.html">About Me</a>
+                        <a class="list-group-item" href="projects.html">Projects</a>
+                        <a class="list-group-item" href="technology.html">Technology</a>
+                    </nav>
+                </div>
             </div>
-            <div class="col-xs-2">
-            <p>col-xs-2</p>
-            </div>
-          <div class="row">
-            <p>row</p>
-            <div class="col-xs-9">
-            <p>col-xs-9</p>
-            </div>
-            <div class="col-xs-3">
-            <p>col-xs-3</p>
-            </div>
-          </div>
-          <div class="row">
-            <p>row</p>
-            <div class="col-xs-9">
-            <p>col-xs-9</p>
-            </div>
-            <div class="col-xs-3">
-            <p>col-xs-3</p>
-            </div>
-          </div>
-          </div> 
         </div>
     </body>
 </html>
