Just some normal stuff committed. Lots of work though.

--- a/public_html/projects.html
+++ b/public_html/projects.html
@@ -9,20 +9,47 @@ and open the template in the editor.
         <title>Projects</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link type="text/css" rel="stylesheet" href="css/bootstrap-theme.css">
+        <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
+        <link type="text/css" rel="stylesheet" href="css/custom-style.css">
     </head>
-    <body>
-        <article>
-            <h1 class="uppercase">Projects</h1>
-            <p>
-                This is my projects page. It displays the projects I've done so <br />
-                far and the projects I'm going too be doing soon. This website  <br />
-                is my second project this school year. My first project was also<br />
-                a portfolio website. The difference between this portfolio site <br />
-                and my last one is that in this one I am using more Bootstrap   <br />
-                elements. "What is 'Bootstrap'?", you may ask, to learn more    <br />
-                about bootstrap got to my Technology page. The link is found on <br />
-                the left.
-            </p>
-        </article>
+    <body id="pro">
+        <div class="container">
+            <h1>Projects</h1>
+            <div class="row">
+                <h2>So far I have done 2 projects including this one.</h2>
+                <div class="col-xs-10">
+                    <div class="row">
+                        <div class="col-xs-3"><h2>Portfolio</h2></div>
+                        <div class="col-xs-9">My portfolio site was the first <br />
+                            I'd done. It pretty much just gave a bit of information <br />
+                            about myself and showed you what I could do with basic<br />
+                            coding this year. That was awhile ago but from that <br />
+                            experience I was able to make this website.
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-3"><h2>Portfolio 2</h2></div>
+                        <div class="col-xs-9">This is my second project and my <br />
+                            second portfolio site. My experience with that helped<br />
+                            me make this site. But there's a difference between <br />
+                            the two. As you could probably tell, this site is a <br />
+                            lot more cool tricks and is much better organised. <br />
+                            That is because I am using Bootstrap! "What is bootstrap?",<br />
+                            you may ask. Bootstrap is a free collection of tools<br />
+                            containing HTML and CSS based design templates. It <br />
+                            makes websites super fancy. Like this one. So, this <br />
+                            projects is the same as the first one but fancier.</div>
+                    </div>
+                </div>
+                <div class="col-xs-2">
+                    <nav class="list-group">
+                        <a class="list-group-item" href="index.html">About Me</a>
+                        <a class="list-group-item" href="projects.html">Projects</a>
+                        <a class="list-group-item" href="technology.html">Technology</a>
+                    </nav>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
