--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,8 +13,9 @@ and open the template in the editor.
         <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
         <link type="text/css" rel="stylesheet" href="css/custom-style.css">
     </head>
-    <body>
+    <body id="index">
         <div class="container">
+            <h1>About Me</h1>
             <div class="row">
                 <div class="col-xs-10">
                     <div class="row">
