--- a/public_html/technology.html
+++ b/public_html/technology.html
@@ -6,11 +6,57 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Technology</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link type="text/css" rel="stylesheet" href="css/bootstrap-theme.css">
+        <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
+        <link type="text/css" rel="stylesheet" href="css/custom-style.css">
     </head>
-    <body>
-        <div>TODO write content</div>
+    <body id="tech">
+        <div class="container">
+            <h1>Technology</h1>
+            <div class="row">
+                <div class="col-xs-10">
+                    <div class="row">
+                        <div class="col-xs-6">
+                            <h2>HTML5</h2>
+                            <p>HTML5 (or "HyperText Markup Language") Is what I <br />
+                                mainly use to make websites. It provides me with<br />
+                                the text you see and the links to different websites.<br />
+                                It works hand in hand with other coding tools, such<br />
+                                as CSS and Bootstrap, to make websites like these<br />
+                                possible.
+                                To learn more about HTML go to the website found<br />
+                                <a id="current-link" href="http://en.wikipedia.org/wiki/HTML">HERE</a>.
+                            </p>
+                        </div>
+                        <div class="col-xs-6">
+                            <h2>CSS</h2>
+                            <p>CSS (or "Cascading Style Sheets") Is what I use to<br />
+                                add colors, borders, backgrounds, and much more. <br />
+                                It pretty much adds style or "fance" to the website<br />
+                                It works with HTML sites to add these cool things.<br />
+                                To learn more about CSS go to the website found <br />
+                                <a id="current-link" href="http://en.wikipedia.org/wiki/Cascading_Style_Sheets">HERE</a>.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <h2>Bootstrap</h2>
+                            <p>Bootstrap...</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-2">
+                    <nav class="list-group">
+                        <a class="list-group-item" href="index.html">About Me</a>
+                        <a class="list-group-item" href="projects.html">Projects</a>
+                        <a class="list-group-item" href="technology.html">Technology</a>
+                    </nav>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
