Near end commit

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -14,17 +14,38 @@ and open the template in the editor.
         <link type="text/css" rel="stylesheet" href="css/custom-style.css">
     </head>
     <body id="index">
+       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+       <script src="js/bootstrap.min.js"></script>
         <div class="container">
-            <h1>About Me</h1>
+            <div class="jumbotron">
+            <h1 align="center">About Me</h1>
+            </div>
             <div class="row">
                 <div class="col-xs-10">
                     <div class="row">
-                        <div class="col-xs-3"></div>
-                        <div class="col-xs-9"></div>
+                        <div align="center" class="col-xs-12"><h2>My name is Ricardo Harris, and I am learning computer science!</h2></div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-3"></div>
-                        <div class="col-xs-9"></div>
+                        <div class="col-xs-12">
+             <p align="center">I was born March 10, 2000 in Glendale, California,<br />
+                 USA. I spent my moving around from place to place in southern <br />
+                California but I spent the majority of my childhood in Pasadena,<br />
+                CA. I had made a YouTube Channel "Ricffris Gamesalot" in 8th grade<br />
+                with gameplays inspiring me to make the things I love so much; <br />
+                video games! My first experience with programming was in 8th grade<br />
+                Robotics class with Mr.Crosby. There I had the help of his assistant<br />
+                Grant and my colleges to learn how to and preform how to program NXT <br />
+                robots. My team won second place in the annual robotics competition <br />
+                of PUSD (Pasadena Unified School District). My school won every other <br />
+                trophy and medal.Crosby was a very inspiring person, though he sugar <br />
+                coated nothing, he opened my eyes to how this world works. I was <br />
+                taught that in this world there are producers and consumers. And <br />
+                I wanted to be a producer. Now I'm off to the right track by entering <br />
+                the APP Academy teaching me more advanced coding tools than C language such <br />
+                as HTML, CSS, Bootstrap, and JavaScript. I am a programmer, and <br />
+                I'm preparing for the future. In this world there are thinkers <br />
+                and there are doers. And I ask myself "Why not be both?"</p>
+                        </div>
                     </div>
                 </div>
                 <div class="col-xs-2">
