--- a/public_html/projects.html
+++ b/public_html/projects.html
@@ -14,14 +14,19 @@ and open the template in the editor.
         <link type="text/css" rel="stylesheet" href="css/custom-style.css">
     </head>
     <body id="pro">
+       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+       <script src="js/bootstrap.min.js"></script>
         <div class="container">
-            <h1>Projects</h1>
+            <div class="jumbotron">
+            <h1 align="center">Projects</h1>
+            </div>
             <div class="row">
                 <h2>So far I have done 2 projects including this one.</h2>
                 <div class="col-xs-10">
                     <div class="row">
                         <div class="col-xs-3"><h2>Portfolio</h2></div>
-                        <div class="col-xs-9">My portfolio site was the first <br />
+                        <div class="col-xs-9"><img class="img-responsive img-rounded" src="css/images/Port1Index.png"><br />
+                            My portfolio site was the first <br />
                             I'd done. It pretty much just gave a bit of information <br />
                             about myself and showed you what I could do with basic<br />
                             coding this year. That was awhile ago but from that <br />
@@ -38,8 +43,11 @@ and open the template in the editor.
                             That is because I am using Bootstrap! "What is bootstrap?",<br />
                             you may ask. Bootstrap is a free collection of tools<br />
                             containing HTML and CSS based design templates. It <br />
-                            makes websites super fancy. Like this one. So, this <br />
-                            projects is the same as the first one but fancier.</div>
+                            makes websites super fancy and "responsive" meaning <br />
+                            it makes our websites move to whatever you are using.<br />
+                            Mobile, laptop, desktop, etc. All of th. Like this <br />
+                            one. So, this projects is the same as the first one <br />
+                            but fancier.</div>
                     </div>
                 </div>
                 <div class="col-xs-2">
