--- a/public_html/technology.html
+++ b/public_html/technology.html
@@ -14,8 +14,12 @@ and open the template in the editor.
         <link type="text/css" rel="stylesheet" href="css/custom-style.css">
     </head>
     <body id="tech">
+       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+       <script src="js/bootstrap.min.js"></script>
         <div class="container">
-            <h1>Technology</h1>
+            <div class="jumbotron">
+                <h1 align="center">Technology</h1>
+            </div>
             <div class="row">
                 <div class="col-xs-10">
                     <div class="row">
@@ -45,7 +49,13 @@ and open the template in the editor.
                     <div class="row">
                         <div class="col-xs-12">
                             <h2>Bootstrap</h2>
-                            <p>Bootstrap...</p>
+                             <p>Bootstrap is a free collection of tools for HTML 
+                                and CSS. It makes websites like this "responsive"<br />
+                                meaning it moves and adjusts to any size screen 
+                                and adapts to mobile and computer settings. This<br />
+                                is my first time heavily applying Bootstrap to a
+                                project. It's very helpful and gives me fancy <br />
+                                tricks to use such as...</p>
                         </div>
                     </div>
                 </div>
