Probably my final commit. Looking good.

--- a/public_html/projects.html
+++ b/public_html/projects.html
@@ -35,11 +35,12 @@ and open the template in the editor.
                     </div>
                     <div class="row">
                         <div class="col-xs-3"><h2>Portfolio 2</h2></div>
-                        <div class="col-xs-9">This is my second project and my <br />
+                        <div class="col-xs-9"><img class="img-responsive img-rounded" src="css/images/PortIndex2.png"><br />
+                            This is my second project and my <br />
                             second portfolio site. My experience with that helped<br />
                             me make this site. But there's a difference between <br />
                             the two. As you could probably tell, this site is a <br />
-                            lot more cool tricks and is much better organised. <br />
+                            lot more cool tricks and is much better organized. <br />
                             That is because I am using Bootstrap! "What is bootstrap?",<br />
                             you may ask. Bootstrap is a free collection of tools<br />
                             containing HTML and CSS based design templates. It <br />
