--- a/public_html/technology.html
+++ b/public_html/technology.html
@@ -32,7 +32,7 @@ and open the template in the editor.
                                 as CSS and Bootstrap, to make websites like these<br />
                                 possible.
                                 To learn more about HTML go to the website found<br />
-                                <a id="current-link" href="http://en.wikipedia.org/wiki/HTML">HERE</a>.
+                                <a class="current-link" href="http://en.wikipedia.org/wiki/HTML">HERE</a>.
                             </p>
                         </div>
                         <div class="col-xs-6">
@@ -42,7 +42,7 @@ and open the template in the editor.
                                 It pretty much adds style or "fance" to the website<br />
                                 It works with HTML sites to add these cool things.<br />
                                 To learn more about CSS go to the website found <br />
-                                <a id="current-link" href="http://en.wikipedia.org/wiki/Cascading_Style_Sheets">HERE</a>.
+                                <a class="current-link" href="http://en.wikipedia.org/wiki/Cascading_Style_Sheets">HERE</a>.
                             </p>
                         </div>
                     </div>
@@ -55,7 +55,10 @@ and open the template in the editor.
                                 and adapts to mobile and computer settings. This<br />
                                 is my first time heavily applying Bootstrap to a
                                 project. It's very helpful and gives me fancy <br />
-                                tricks to use such as...</p>
+                                tricks to use such as jumbotron and responsive <br />
+                                images. To learn more about Bootstrap click on the link<br />
+                              <a class="current-link" href="http://getbootstrap.com/">HERE</a>.
+                             </p>
                         </div>
                     </div>
                 </div>
