Committing for finals... I hate everythingasjjdg,cbmhvsdasjnkm,iasBJMk,n.jkX>YDA

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -14,10 +14,8 @@ and open the template in the editor.
         <link type="text/css" rel="stylesheet" href="css/custom-style.css">
     </head>
     <body id="index">
-       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-       <script src="js/bootstrap.min.js"></script>
         <div class="container">
-            <div class="jumbotron">
+           <div class="jumbotron">
             <h1 align="center">About Me</h1>
             </div>
             <div class="row">
@@ -54,12 +52,32 @@ and open the template in the editor.
                         <a class="list-group-item" href="projects.html">Projects</a>
                         <a class="list-group-item" href="technology.html">Technology</a>
                     </nav>
+                    <!--The "nav" here makes these words in black links to my other pages-->
                 </div>
             </div>
+            <div class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        <p>One fine body&hellip;</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
         </div>
        <!-- SCM Music Player http://scmplayer.net -->
+       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+       <script src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="http://scmplayer.net/script.js" 
 data-config="{'skin':'skins/cyber/skin.css','volume':50,'autoplay':true,'shuffle':true,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{'title':'Villager GameofThrones','url':'https://www.youtube.com/watch?v=0Ov-ra4whs4'},{'title':'Blue - Gemini','url':'https://www.youtube.com/watch?v=tcWzVUlrzdc'},{'title':'Harder, Better, Faster, Stronger','url':'https://www.youtube.com/watch?v=GDpmVUEjagg'}]}" ></script>
-<!-- SCM Music Player script end -->
+<!--I used the SCM music player to play music on my website-->
     </body>
 </html>
