--- a/public_html/projects.html
+++ b/public_html/projects.html
@@ -14,18 +14,16 @@ and open the template in the editor.
         <link type="text/css" rel="stylesheet" href="css/custom-style.css">
     </head>
     <body id="pro">
-       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-       <script src="js/bootstrap.min.js"></script>
         <div class="container">
             <div class="jumbotron">
-            <h1 align="center">Projects</h1>
+                <h1 align="center">Projects</h1>
             </div>
             <div class="row">
                 <h2>So far I have done 2 projects including this one.</h2>
                 <div class="col-xs-10">
                     <div class="row">
                         <div class="col-xs-3"><h2>Portfolio</h2></div>
-                        <div class="col-xs-9"><img class="img-responsive img-rounded" src="css/images/Port1Index.png"><br />
+                        <div class="col-xs-9"><a href="http://localhost:8383/Ricardo%20Harris%20-%20Portfolio%20Website/index.html"><img class="img-responsive img-rounded" src="css/images/Port1Index.png"><br /></a>
                             My portfolio site was the first <br />
                             I'd done. It pretty much just gave a bit of information <br />
                             about myself and showed you what I could do with basic<br />
@@ -50,19 +48,59 @@ and open the template in the editor.
                             one. So, this projects is the same as the first one <br />
                             but fancier.</div>
                     </div>
+                    <div class="row">
+                        <div class="col-xs-3"><h2>Snake</h2></div>
+                        <div class="col-xs-9"><img class="img-responsive img-rounded" src="css/images/SnakeEarlyScreenshot.png"><br />
+                            My snake game was the first game I'd created. It's <br />
+                            based upon the game "Snake" game made in the late 1970's<br />
+                            based around a number of shapes that move around following<br />
+                            one another moving like a snake. Every time it eats <br />
+                            food it becomes one of those shapes longer. You lose <br />
+                            you lose if you hit the wall or yourself. What differs<br />
+                            this project from the portfolios, besides this one <br />
+                            being a game, is that in this one I am using Javascript.<br />
+                            Javascript is "an object-oriented computer programming<br />
+                            language commonly used to create interactive effects <br />
+                            within web browsers. Which pretty much means it makes<br />
+                            objects on a website move through code. So my Snake <br />
+                            game is based off of an html site just like my other <br />
+                            two projects before this.</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-3"><h2>Mario</h2></div>
+                        <div class="col-xs-9"><img class="img-responsive img-rounded" src="css/images/MarioScreenshot.png"><br/>
+                            My Mario type game, inofficially known as "Danger Dude"<br />
+                            is a game, obviously, based off of the Mario Bros. <br />
+                            franchise, by Nintendo. This game is a "side-scroller"<br />
+                            type game, meaning it  moves across a side scroll. <br />
+                            As my second game and my fourth project, I had the most<br />
+                            fun making this game. For the first time, I'm most <br />
+                            proud of everything in the project. What I mainly used<br />
+                            to make this game was the game creation engine "Tiled"<br />
+                            and the coding language "melonJS". In Tiled you can <br />
+                            make maps for games of 2 and 3 dimensions using "tiles"<br />
+                            which are basically sheets of custom design or "tilesets".<br />
+                            I used tiled to create my game's levels. Tiled is <br />
+                            very simple and can be used by anyone with or without<br />
+                            tutorial. melonJS is an open-source HTML5 based community<br />
+                            game engine. In other words you use it to make games<br />
+                            with HTML. "Danger Dude" is based within html as well<br />
+                            as my other projects.
+                        </div>
+                    </div>
                 </div>
-                <div class="col-xs-2">
-                    <nav class="list-group">
-                        <a class="list-group-item" href="index.html">About Me</a>
-                        <a class="list-group-item" href="projects.html">Projects</a>
-                        <a class="list-group-item" href="technology.html">Technology</a>
-                    </nav>
-                </div>
-            </div>
-        </div>
-       <!-- SCM Music Player http://scmplayer.net -->
-<script type="text/javascript" src="http://scmplayer.net/script.js" 
-data-config="{'skin':'skins/cyber/skin.css','volume':50,'autoplay':true,'shuffle':true,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{'title':'Villager GameofThrones','url':'https://www.youtube.com/watch?v=0Ov-ra4whs4'},{'title':'Blue - Gemini','url':'https://www.youtube.com/watch?v=tcWzVUlrzdc'},{'title':'Harder, Better, Faster, Stronger','url':'https://www.youtube.com/watch?v=GDpmVUEjagg'}]}" ></script>
-<!-- SCM Music Player script end -->
-    </body>
-</html>
+                    <div class="col-xs-2">
+                        <nav class="list-group">
+                            <a class="list-group-item" href="index.html">About Me</a>
+                            <a class="list-group-item" href="projects.html">Projects</a>
+                            <a class="list-group-item" href="technology.html">Technology</a>
+                        </nav>
+                    </div>  
+                    <!-- SCM Music Player http://scmplayer.net -->
+                    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+       <script src="js/bootstrap.min.js"></script>
+                    <script type="text/javascript" src="http://scmplayer.net/script.js" 
+                    data-config="{'skin':'skins/cyber/skin.css','volume':50,'autoplay':true,'shuffle':true,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{'title':'Villager GameofThrones','url':'https://www.youtube.com/watch?v=0Ov-ra4whs4'},{'title':'Blue - Gemini','url':'https://www.youtube.com/watch?v=tcWzVUlrzdc'},{'title':'Harder, Better, Faster, Stronger','url':'https://www.youtube.com/watch?v=GDpmVUEjagg'}]}" ></script>
+                    <!--I used the SCM music player to play music on my website-->
+                    </body>
+                    </html>
