--- a/public_html/technology.html
+++ b/public_html/technology.html
@@ -14,8 +14,6 @@ and open the template in the editor.
         <link type="text/css" rel="stylesheet" href="css/custom-style.css">
     </head>
     <body id="tech">
-       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-       <script src="js/bootstrap.min.js"></script>
         <div class="container">
             <div class="jumbotron">
                 <h1 align="center">Technology</h1>
@@ -34,6 +32,7 @@ and open the template in the editor.
                                 To learn more about HTML go to the website found<br />
                                 <a class="current-link" href="http://en.wikipedia.org/wiki/HTML">HERE</a>.
                             </p>
+                            <!--A paragraph about HTML with a link to the HTML wiki-->
                         </div>
                         <div class="col-xs-6">
                             <h2>CSS</h2>
@@ -44,12 +43,13 @@ and open the template in the editor.
                                 To learn more about CSS go to the website found <br />
                                 <a class="current-link" href="http://en.wikipedia.org/wiki/Cascading_Style_Sheets">HERE</a>.
                             </p>
+                            <!--A paragraph on CSS with a link to the CSS wiki-->
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-12">
                             <h2>Bootstrap</h2>
-                             <p>Bootstrap is a free collection of tools for HTML 
+                            <p>Bootstrap is a free collection of tools for HTML 
                                 and CSS. It makes websites like this "responsive"<br />
                                 meaning it moves and adjusts to any size screen 
                                 and adapts to mobile and computer settings. This<br />
@@ -57,8 +57,35 @@ and open the template in the editor.
                                 project. It's very helpful and gives me fancy <br />
                                 tricks to use such as jumbotron and responsive <br />
                                 images. To learn more about Bootstrap click on the link<br />
-                              <a class="current-link" href="http://getbootstrap.com/">HERE</a>.
-                             </p>
+                                <a class="current-link" href="http://getbootstrap.com/">HERE</a>.
+                            </p>
+                            <!--A paragraph describing Bootstrap with a link to the "getbootstrap" page that I use for help-->
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <h2>Javascript</h2>
+                            <p>Javascript is an object-oriented computer programming<br />
+                                language commonly used to create interactive effects.
+                                Its used to move objects across the screen. You <br />
+                                can do nearly anything with it. The possibilities
+                                are endless. I used it to make a game; snake. Its<br />
+                                an extremely complicated and advanced language.
+                                To learn more about Javascript click on the link<br />
+                                <a class="current-link" href="http://en.wikipedia.org/wiki/Snake_(video_game)">HERE</a>.
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <h2>melonJS</h2>
+                            <p>melonsJS is an open-source HTML5 based community <br />
+                                game engine. It's basically a language used to create<br />
+                                games in HTML. It is a very complicated language <br />
+                                truly based off of Javascript. It interacts with <br />
+                                many other programs, hence "open-source". I used <br />
+                                it to create my "Mario" based game "Danger Dude".<br />
+                                To learn more about melonJS click on the link<br />
+                                <a class="current-link" href="http://melonjs.org/">HERE</a>
                         </div>
                     </div>
                 </div>
@@ -68,12 +95,11 @@ and open the template in the editor.
                         <a class="list-group-item" href="projects.html">Projects</a>
                         <a class="list-group-item" href="technology.html">Technology</a>
                     </nav>
+                    <!--The "nav" here makes these words in black links to my other pages-->
                 </div>
-            </div>
-        </div>
-       <!-- SCM Music Player http://scmplayer.net -->
-<script type="text/javascript" src="http://scmplayer.net/script.js" 
-data-config="{'skin':'skins/cyber/skin.css','volume':50,'autoplay':true,'shuffle':true,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{'title':'Villager GameofThrones','url':'https://www.youtube.com/watch?v=0Ov-ra4whs4'},{'title':'Blue - Gemini','url':'https://www.youtube.com/watch?v=tcWzVUlrzdc'},{'title':'Harder, Better, Faster, Stronger','url':'https://www.youtube.com/watch?v=GDpmVUEjagg'}]}" ></script>
-<!-- SCM Music Player script end -->
-    </body>
-</html>
+                <!-- SCM Music Player http://scmplayer.net -->
+                <script type="text/javascript" src="http://scmplayer.net/script.js" 
+                data-config="{'skin':'skins/cyber/skin.css','volume':50,'autoplay':true,'shuffle':true,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{'title':'Villager GameofThrones','url':'https://www.youtube.com/watch?v=0Ov-ra4whs4'},{'title':'Blue - Gemini','url':'https://www.youtube.com/watch?v=tcWzVUlrzdc'},{'title':'Harder, Better, Faster, Stronger','url':'https://www.youtube.com/watch?v=GDpmVUEjagg'}]}" ></script>
+                <!--I used the SCM music player to play music on my website-->
+                </body>
+                </html>
