--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,34 +15,49 @@ and open the template in the editor.
     </head>
     <body id="index">
         <div class="container">
-           <div class="jumbotron">
-            <h1 align="center">About Me</h1>
+            <div class="jumbotron">
+                <h1 align="center">About Me</h1>
             </div>
             <div class="row">
                 <div class="col-xs-10">
                     <div class="row">
                         <div align="center" class="col-xs-12"><h2>My name is Ricardo Harris, and I am learning computer science!</h2></div>
                     </div>
-                    <div class="row">
-                        <div class="col-xs-12">
-             <p align="center">I was born March 10, 2000 in Glendale, California,<br />
-                 USA. I spent my moving around from place to place in southern <br />
-                California but I spent the majority of my childhood in Pasadena,<br />
-                CA. I had made a YouTube Channel "Ricffris Gamesalot" in 8th grade<br />
-                with gameplays inspiring me to make the things I love so much; <br />
-                video games! My first experience with programming was in 8th grade<br />
-                Robotics class with Mr.Crosby. There I had the help of his assistant<br />
-                Grant and my colleges to learn how to and preform how to program NXT <br />
-                robots. My team won second place in the annual robotics competition <br />
-                of PUSD (Pasadena Unified School District). My school won every other <br />
-                trophy and medal.Crosby was a very inspiring person, though he sugar <br />
-                coated nothing, he opened my eyes to how this world works. I was <br />
-                taught that in this world there are producers and consumers. And <br />
-                I wanted to be a producer. Now I'm off to the right track by entering <br />
-                the APP Academy teaching me more advanced coding tools than C language such <br />
-                as HTML, CSS, Bootstrap, and JavaScript. I am a programmer, and <br />
-                I'm preparing for the future. In this world there are thinkers <br />
-                and there are doers. And I ask myself "Why not be both?"</p>
+                    <div class="panel-group" id="accordion" role="tablist">
+                        <div class="panel panel-default">
+                            <div class="panel-heading" role="tab" id="headingOne">
+                                <h4 class="panel-title">
+                                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                        Short Bio
+                                    </a>
+                                </h4>
+                            </div>
+                            <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+                                <div class="panel-body">
+                                    <div class="row">
+                                        <div class="col-xs-12">
+                                            <p align="center">I was born March 10, 2000 in Glendale, California,<br />
+                                                USA. I spent my moving around from place to place in southern <br />
+                                                California but I spent the majority of my childhood in Pasadena,<br />
+                                                CA. I had made a YouTube Channel "Ricffris Gamesalot" in 8th grade<br />
+                                                with gameplays inspiring me to make the things I love so much; <br />
+                                                video games! My first experience with programming was in 8th grade<br />
+                                                Robotics class with Mr.Crosby. There I had the help of his assistant<br />
+                                                Grant and my colleges to learn how to and preform how to program NXT <br />
+                                                robots. My team won second place in the annual robotics competition <br />
+                                                of PUSD (Pasadena Unified School District). My school won every other <br />
+                                                trophy and medal.Crosby was a very inspiring person, though he sugar <br />
+                                                coated nothing, he opened my eyes to how this world works. I was <br />
+                                                taught that in this world there are producers and consumers. And <br />
+                                                I wanted to be a producer. Now I'm off to the right track by entering <br />
+                                                the APP Academy teaching me more advanced coding tools than C language such <br />
+                                                as HTML, CSS, Bootstrap, and JavaScript. I am a programmer, and <br />
+                                                I'm preparing for the future. In this world there are thinkers <br />
+                                                and there are doers. And I ask myself "Why not be both?"</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -55,29 +70,12 @@ and open the template in the editor.
                     <!--The "nav" here makes these words in black links to my other pages-->
                 </div>
             </div>
-            <div class="modal fade">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title">Modal title</h4>
-      </div>
-      <div class="modal-body">
-        <p>One fine body&hellip;</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
         </div>
-       <!-- SCM Music Player http://scmplayer.net -->
-       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-       <script src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="http://scmplayer.net/script.js" 
-data-config="{'skin':'skins/cyber/skin.css','volume':50,'autoplay':true,'shuffle':true,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{'title':'Villager GameofThrones','url':'https://www.youtube.com/watch?v=0Ov-ra4whs4'},{'title':'Blue - Gemini','url':'https://www.youtube.com/watch?v=tcWzVUlrzdc'},{'title':'Harder, Better, Faster, Stronger','url':'https://www.youtube.com/watch?v=GDpmVUEjagg'}]}" ></script>
-<!--I used the SCM music player to play music on my website-->
+        <!-- SCM Music Player http://scmplayer.net -->
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="http://scmplayer.net/script.js" 
+        data-config="{'skin':'skins/cyber/skin.css','volume':50,'autoplay':true,'shuffle':true,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{'title':'Villager GameofThrones','url':'https://www.youtube.com/watch?v=0Ov-ra4whs4'},{'title':'Blue - Gemini','url':'https://www.youtube.com/watch?v=tcWzVUlrzdc'},{'title':'Harder, Better, Faster, Stronger','url':'https://www.youtube.com/watch?v=GDpmVUEjagg'}]}" ></script>
+        <!--I used the SCM music player to play music on my website-->
     </body>
 </html>
